repos/test-emily-game/contents/sample/test/macro/fail/assignPath.em
# Test quirks of = macro
# Expect failure

a b ^ c d = 3